# nimble

./: .gitattributes  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
src/: main.rs  md5_digest.rs  mod_cache.rs  pbo.rs  repository.rs  srf.rs
src/commands/: gen_srf.rs  launch.rs  mod.rs  sync.rs
test_files/: legacy_format_mod.srf
