[package]
name = "nimble"
version = "0.1.0"
edition = "2021"
authors = ["Victor Chiletto <v@hnn.net.br>"]
license = "GPL-3.0-or-later"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7"
md-5 = { version = "0.10", features = [] }
byteorder = "1"
ureq = { version = "2", features = ["tls", "json"] }
relative-path = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"
walkdir = "2"
# tinyvec = { version = "1.5", features = ["alloc", "rustc_1_55"] }
